Enhanced UI features, resolved various bugs, and conducted code refactoring for improved maintainability.
    feat: main window now opens in the last saved location on screen, dialogs also open relative to history window
	feat: allow user to choose the format of the thumbnail to download (png, jpg, webm)
	feat: added a clickable icon that opens the dev website
	feat: added confirm dialogs with the option to never ask again
	feat: added cursors to clickable buttons/ components
	feat: added an option to close the history window on insert

	fix: made ffmpeg location more specific and fixed error where ffmpeg wasn't found on windows
	fix: allowed whitespaces in directory paths
	fix: fixed youtube shorts not being recognized as valid url
	fix: fixed custom separator width calculations
	fix: default sort column not being date
	fix: printing the history list now works properly
	fix: video title having whitespaces infront causing allignment errors in the table
	fix: download directory being set to /Downloads when file chooser dialog was canceled
	fix: file deletion on download cancel now deletes all files with the same name, not just .part and .ytdl

	refactor: changed java version to 21, refactored to use some new features
	refactor: finalized variables that remain unchanged
	refactor: renamed separator names for clarity
	refactor: made history window size variables global
	refactor: made history window non modal
	refactor: modularized constructors
	refactor: changed containers for title area and textfield area
	refactor: renamed CL arg 'debug' to '-debug'